# tahoma

./: .gdbinit  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ubuntu.yml
docs/: c++-for-pythonians.adoc  design.adoc  dev-docs.adoc  metricx-usage.md
examples/: get-bitext.sh  get-mnist.sh  transformer-lm.yaml  transformer-nmt.yaml
examples/data/: .gitignore  get-bitext.sh
examples/nmt/: transformer.toml  transformer.yaml
include/: indicators.hpp  tahoma.h
include/tahoma/: config.h  data.h  definitions.h  model.h  serialize.h  utils.h  vocab.h
include/tahoma/common/: generator.h
include/tahoma/inference/: decoder.h  predictor.h
include/tahoma/layer/: transformer.h
include/tahoma/model/: metricx.h  mt5.h  transformer_nmt.h
include/tahoma/train/: stats_counter.h  trainer.h  utils.h
lib/: setup.sh
libs/: CMakeLists.txt  setup.sh
libs/cnpy/: cnpy.cpp  cnpy.h
notes/: learn-torch.ipynb  playground.ipynb
scripts/: post_build.py  torch2npz.py  tsv2jsonl
scripts/debug/: metricx_model.py  mt5.py  mt5_inspect.ipynb
src/: CMakeLists.txt  buffer.cpp  buffer.cpp.tmp  config.cpp  data.cpp  hello.cpp  main.cpp  mnist.cpp  model.cpp  serialize.cpp  utils.cpp
src/common/: commons.hpp  config.cpp  config.hpp  data.hpp  queue.cpp  utils.hpp
src/cpp/: data.cpp  main.cpp  utils.cpp  vocab.cpp
src/cpp/inference/: predictor.cpp
src/cpp/layer/: transformer.cpp
src/cpp/model/: mt5.cpp  transformer_lm.cpp  transformer_nmt.cpp
src/cpp/train/: criterion.cpp  loss_computer.cpp  stats_counter.cpp  trainer.cpp
src/include/: __generator.hpp  argparse.hpp  rtg.hpp  tahoma.hpp
src/include/tahoma/: autocast.h  data.h  definitions.h  model.h  utils.h
src/include/tahoma/common/: autocast.h
src/include/tahoma/inference/: predictor.h
src/include/tahoma/layer/: transformer.h
src/include/tahoma/model/: metricx.h  transformer_lm.h  xlmr.h
src/include/tahoma/train/: criterion.h  loss_computer.h  stats_counter.h  trainer.h
src/inference/: decoder.cpp  decoder.hpp  predictor.cpp
src/layer/: transformer.cpp  transformer.hpp
src/model/: mt5.cpp  transformer_lm.hpp  transformer_nmt.hpp
src/nmt/: CMakeLists.txt  trainer.hpp  transformer.cpp  transformer.hpp
src/scratch/: mnist.cpp
src/train/: criterion.hpp  loss_computer.hpp  stats_counter.cpp  stats_counter.hpp  trainer.cpp  trainer.hpp  utils.cpp  utils.hpp
tests/: .gitignore  CMakeLists.txt  create_npz.py  main.cpp  setup.sh  tahoma_tests.cpp  test_data_loader.cpp  test_data_loader.hpp  test_metrics.py  test_parallel_init.cpp  test_serialize.cpp  test_trainer.cpp
tests/data/: sample.mt5.txt  sample.src-mt-ref.tsv  sample.wmt23.en-de.score.metricx-24-hybrid-large-v2p6.qe.expect.txt  sample.wmt23.en-de.score.metricx-24-hybrid-large-v2p6.ref.expect.txt  sample.wmt23.en-de.tsv  sample.wmt23.en-ru.score.metricx-24-hybrid-large-v2p6.qe.expect.txt  sample.wmt23.en-ru.score.metricx-24-hybrid-large-v2p6.ref.expect.txt  sample.wmt23.en-ru.tsv  test.npz
